[project]
name = "ds_helper"
version = "0.1.0"

dependencies = ["rucio >= 1.31", "pyAMI_atlas >= 5", "prettyTables>=1.0"]

[project.optional-dependencies]
test = [
  'black',
  'flake8',
  'pytest',
]

[project.scripts]
ds_finder = "ds_helper.ds_finder:main"

[build-system]
requires = ["setuptools", "wheel"]
